Update to Australian English spelling (customised)

--- a/services.html
+++ b/services.html
@@ -193,7 +193,7 @@
         <div class="container">
             <div class="cta-content">
                 <h2>Let's Discuss Your Project</h2>
-                <p>Contact us to learn how we can provide customized solutions for your specific needs</p>
+                <p>Contact us to learn how we can provide customised solutions for your specific needs</p>
                 <div class="cta-buttons">
                     <a href="quote.html" class="btn btn-primary">Request a Quote</a>
                     <a href="contact.html" class="btn btn-secondary">Contact Us</a>
