Improve homepage: Make service cards clickable, add icons to capabilities (5 wide), centre layout

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="container">
             <h2 class="section-title">Our Services</h2>
             <div class="services-grid">
-                <div class="service-card">
+                <a href="services.html#design" class="service-card">
                     <div class="service-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01" />
@@ -132,8 +132,8 @@
                     </div>
                     <h3>Design</h3>
                     <p>Transforming customers' ideas and concepts into reality</p>
-                </div>
-                <div class="service-card">
+                </a>
+                <a href="services.html#drafting" class="service-card">
                     <div class="service-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
@@ -141,8 +141,8 @@
                     </div>
                     <h3>Drafting</h3>
                     <p>Professional CAD drafting for customers' designs</p>
-                </div>
-                <div class="service-card">
+                </a>
+                <a href="services.html#manufacturing" class="service-card">
                     <div class="service-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
@@ -150,8 +150,8 @@
                     </div>
                     <h3>Manufacturing</h3>
                     <p>Complete manufacture of customers' products</p>
-                </div>
-                <div class="service-card">
+                </a>
+                <a href="services.html#laser-cutting" class="service-card">
                     <div class="service-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
@@ -159,8 +159,8 @@
                     </div>
                     <h3>Laser Cutting</h3>
                     <p>Precision laser cutting services up to 20mm thickness</p>
-                </div>
-                <div class="service-card">
+                </a>
+                <a href="services.html#fabrication" class="service-card">
                     <div class="service-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" />
@@ -168,7 +168,7 @@
                     </div>
                     <h3>Sheet Metal Fabrication</h3>
                     <p>Medium engineering and custom sheet metal work</p>
-                </div>
+                </a>
             </div>
             <div class="cta-center">
                 <a href="services.html" class="btn btn-primary">View All Services</a>
@@ -182,22 +182,47 @@
             <h2 class="section-title">Our Capabilities</h2>
             <div class="capabilities-grid">
                 <div class="capability-item">
+                    <div class="capability-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+                        </svg>
+                    </div>
                     <h3>CAD Drafting</h3>
                     <p>Advanced computer-aided design services</p>
                 </div>
                 <div class="capability-item">
+                    <div class="capability-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
+                        </svg>
+                    </div>
                     <h3>Laser Cutting to 20mm</h3>
                     <p>Precision cutting for various thicknesses</p>
                 </div>
                 <div class="capability-item">
+                    <div class="capability-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 7v10c0 2.21 3.582 4 8 4s8-1.79 8-4V7M4 7c0 2.21 3.582 4 8 4s8-1.79 8-4M4 7c0-2.21 3.582-4 8-4s8 1.79 8 4" />
+                        </svg>
+                    </div>
                     <h3>CNC Folding</h3>
                     <p>Automated precision folding</p>
                 </div>
                 <div class="capability-item">
+                    <div class="capability-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
+                        </svg>
+                    </div>
                     <h3>Rolling</h3>
                     <p>Professional metal rolling services</p>
                 </div>
                 <div class="capability-item">
+                    <div class="capability-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 10l7-7m0 0l7 7m-7-7v18" />
+                        </svg>
+                    </div>
                     <h3>Lifting</h3>
                     <p>Heavy lifting capabilities</p>
                 </div>
