Update homepage banner to use stunning laser cutting in action image

--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
     <section class="hero">
         <div class="slider">
             <div class="slide active">
-                <img src="images/slide1.jpg" alt="Laser Cutting" onerror="this.src='https://images.unsplash.com/photo-1565193566173-7a0ee3dbe261?w=1920&h=800&fit=crop'">
+                <img src="images/lasercutting.jpg" alt="Laser Cutting in Action" onerror="this.src='https://images.unsplash.com/photo-1565193566173-7a0ee3dbe261?w=1920&h=800&fit=crop'">
                 <div class="slide-overlay"></div>
             </div>
             <div class="slide">
-                <img src="images/slide2.jpg" alt="Metal Fabrication" onerror="this.src='https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?w=1920&h=800&fit=crop'">
+                <img src="images/lasercutting.jpg" alt="Precision Laser Cutting" onerror="this.src='https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?w=1920&h=800&fit=crop'">
                 <div class="slide-overlay"></div>
             </div>
             <div class="slide">
-                <img src="images/slide3.jpg" alt="Manufacturing" onerror="this.src='https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=1920&h=800&fit=crop'">
+                <img src="images/lasercutting.jpg" alt="Metal Fabrication" onerror="this.src='https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=1920&h=800&fit=crop'">
                 <div class="slide-overlay"></div>
             </div>
             <div class="slide">
-                <img src="images/slide4.jpg" alt="CNC Machinery" onerror="this.src='https://images.unsplash.com/photo-1581092795360-fd1ca04f0952?w=1920&h=800&fit=crop'">
+                <img src="images/lasercutting.jpg" alt="Advanced Manufacturing" onerror="this.src='https://images.unsplash.com/photo-1581092795360-fd1ca04f0952?w=1920&h=800&fit=crop'">
                 <div class="slide-overlay"></div>
             </div>
         </div>
