Remove slider, create static hero banner with lighter blue transparent overlay

--- a/index.html
+++ b/index.html
@@ -39,25 +39,11 @@
         </div>
     </nav>
 
-    <!-- Hero Section with Slider -->
+    <!-- Hero Section -->
     <section class="hero">
-        <div class="slider">
-            <div class="slide active">
-                <img src="images/lasercutting.jpg" alt="Laser Cutting in Action" onerror="this.src='https://images.unsplash.com/photo-1565193566173-7a0ee3dbe261?w=1920&h=800&fit=crop'">
-                <div class="slide-overlay"></div>
-            </div>
-            <div class="slide">
-                <img src="images/lasercutting.jpg" alt="Precision Laser Cutting" onerror="this.src='https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?w=1920&h=800&fit=crop'">
-                <div class="slide-overlay"></div>
-            </div>
-            <div class="slide">
-                <img src="images/lasercutting.jpg" alt="Metal Fabrication" onerror="this.src='https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=1920&h=800&fit=crop'">
-                <div class="slide-overlay"></div>
-            </div>
-            <div class="slide">
-                <img src="images/lasercutting.jpg" alt="Advanced Manufacturing" onerror="this.src='https://images.unsplash.com/photo-1581092795360-fd1ca04f0952?w=1920&h=800&fit=crop'">
-                <div class="slide-overlay"></div>
-            </div>
+        <div class="hero-image">
+            <img src="images/lasercutting.jpg" alt="Laser Cutting in Action" onerror="this.src='https://images.unsplash.com/photo-1565193566173-7a0ee3dbe261?w=1920&h=800&fit=crop'">
+            <div class="hero-overlay"></div>
         </div>
         <div class="hero-content">
             <div class="container">
@@ -68,12 +54,6 @@
                     <a href="services.html" class="btn btn-secondary">Our Services</a>
                 </div>
             </div>
-        </div>
-        <div class="slider-dots">
-            <span class="dot active" onclick="currentSlide(0)"></span>
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
         </div>
     </section>
 
